Bug 107870 - Undefined symbols for architecture x86_64: "_util_cpu_caps"
Summary: Undefined symbols for architecture x86_64: "_util_cpu_caps"
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Mac OS X (All)
: medium normal
Assignee: Dylan Baker
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks: mesa-18.3
  Show dependency treegraph
 
Reported: 2018-09-09 05:34 UTC by Vinson Lee
Modified: 2018-10-30 22:02 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2018-09-09 05:34:28 UTC
CXXLD    mesa_dri_drivers.la
Undefined symbols for architecture x86_64:
  "_util_cpu_caps", referenced from:
      _util_fpstate_get in libmesa.a(libmesautil_la-u_math.o)
      _util_fpstate_set_denorms_to_zero in libmesa.a(libmesautil_la-u_math.o)
      _util_fpstate_set in libmesa.a(libmesautil_la-u_math.o)
Comment 1 Dylan Baker 2018-09-09 07:06:21 UTC
I've sent a patch to the list that hopefully fixes this.
Comment 2 Vinson Lee 2018-09-20 05:22:18 UTC
commit 80825abb5d1a7491035880253ffd531c55acae6b
Author: Dylan Baker <dylan@pnwbakers.com>
Date:   Thu Aug 16 17:20:38 2018 -0700

    move u_math to src/util
    
    Currently we have two sets of functions for bit counts, one in gallium
    and one in core mesa. The ones in core mesa are header only in many
    cases, since they reduce to "#define _mesa_bitcount popcount", but they
    provide a fallback implementation. This is important because 32bit msvc
    doesn't have popcountll, just popcount; so when nir (for example)
    includes the core mesa header it doesn't (and shouldn't) link with core
    mesa. To fix this we'll promote the version out of gallium util, then
    replace the core mesa uses with the util version, since nir (and other
    non-core mesa users) can and do link with mesautils.
    
    Acked-by: Eric Engestrom <eric.engestrom@intel.com>
    Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>
Comment 3 Dylan Baker 2018-09-20 12:58:32 UTC
This should be resolved now.
Comment 4 Dylan Baker 2018-10-29 18:59:36 UTC
New series sent out to fix this.
Comment 5 Dylan Baker 2018-10-30 22:02:46 UTC
This time for sure!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.